--- a/app/templates/todos.hbs
+++ b/app/templates/todos.hbs
@@ -2,14 +2,18 @@
 
 <section id="main">
     <ul id="todo-list">
-        {{#each}}
-            <li>
-                <input type="checkbox" class="toggle">
-                <label>{{title}}</label><button class="destroy"></button>
-            </li>
-        {{/each}}
+      {{#each itemController="todo"}}
+          <li {{bind-attr class="isCompleted:completed isEditing:editing"}}>
+            {{#if isEditing}}
+              {{edit-todo type="text" class="edit" value=title focus-out="acceptChanges" insert-newline="acceptChanges"}}
+            {{else}}
+              {{input type="checkbox" checked=isCompleted class="toggle"}}
+                <label {{action "editTodo" on="doubleClick"}}>{{title}}</label>
+                <button {{action "removeTodo"}} class="destroy"></button>
+            {{/if}}
+          </li>
+      {{/each}}
     </ul>
-
     <input type="checkbox" id="toggle-all">
 </section>
 
